--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
         "@types/node": "^20",
         "@types/react": "^19",
         "@types/react-dom": "^19",
+        "@types/testing-library__jest-dom": "^5.14.9",
         "eslint": "^9",
         "eslint-config-next": "15.3.3",
         "jest": "^29.7.0",
         "jest-environment-jsdom": "^30.0.0-beta.3",
         "tailwindcss": "^4",
+        "ts-jest": "^29.3.4",
         "ts-node": "^10.9.2",
         "typescript": "^5"
     }
