--- a/package.json
+++ b/package.json
@@ -28,8 +28,11 @@
         "@types/testing-library__jest-dom": "^5.14.9",
         "eslint": "^9",
         "eslint-config-next": "15.3.3",
+        "eslint-config-prettier": "^10.1.5",
+        "eslint-plugin-prettier": "^5.4.1",
         "jest": "^29.7.0",
         "jest-environment-jsdom": "^30.0.0-beta.3",
+        "prettier": "^3.5.3",
         "tailwindcss": "^4",
         "ts-jest": "^29.3.4",
         "ts-node": "^10.9.2",
