--- a/.github/workflows/lint-test-build.yml
+++ b/.github/workflows/lint-test-build.yml
@@ -25,3 +25,6 @@ jobs:
 
             - name: Run Tests
               run: npm test
+
+            - name: Run Build
+              run: npm run build
