--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
         "start": "next start",
         "lint": "next lint",
         "test": "jest",
-        "test:watch": "jest --watch"
+        "test:watch": "jest --watch",
+        "prepare": "husky"
     },
     "dependencies": {
+        "@supabase/supabase-js": "^2.50.0",
         "next": "15.3.3",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
@@ -31,6 +33,7 @@
         "eslint-config-next": "15.3.3",
         "eslint-config-prettier": "^10.1.5",
         "eslint-plugin-prettier": "^5.4.1",
+        "husky": "^9.1.7",
         "jest": "^29.7.0",
         "jest-environment-jsdom": "^30.0.0-beta.3",
         "prettier": "^3.5.3",
