--- a/.github/workflows/lint-test-build.yml
+++ b/.github/workflows/lint-test-build.yml
@@ -9,7 +9,7 @@ env:
     NEXT_PUBLIC_SUPABASE_ANON_KEY: ${{ secrets.NEXT_PUBLIC_SUPABASE_ANON_KEY }}
 
 jobs:
-    lint-and-test:
+    lint-test-build:
         runs-on: ubuntu-latest
 
         steps:
